--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 		<title>Gitの勉強</title>
 	</head>
 	<body>
-		<h1>gh-pagesブランチはGITHUB Pagesに追加されます。</h1>
+		<h1>gh-pagesブランチはGitHub Pagesに追加されます。</h1>
+		<p>この変更はmasterブランチで追加されました。</p>
+
 	</body>
 </html>
 
